# quicklock

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.gradle.kts  certificates.ts  crypto.ts  homeassistant.ts  main.ts  package.json  pnpm-lock.yaml  settings.gradle.kts
app/: .gitignore  build.gradle  settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  quicklock.cpp
app/app/src/main/java/dev/kdrag0n/quicklock/: CryptoService.kt  CustomApplication.kt  MainViewModel.kt  NativeLib.kt  ServerHostApduService.kt  SettingsRepository.kt
app/app/src/main/java/dev/kdrag0n/quicklock/nfc/: Models.kt
app/app/src/main/java/dev/kdrag0n/quicklock/server/: ApiClient.kt  ApiModule.kt  ApiService.kt  AuditService.kt  NfcApiService.kt  NfcApiServiceWrapper.kt
app/app/src/main/java/dev/kdrag0n/quicklock/ui/: ConfirmDelegationViewModel.kt  MainActivity.kt  NfcInteractiveActivity.kt  NfcInteractiveViewModel.kt  NfcUnlockActivity.kt  NfcWriteActivity.kt  QrDisplayActivity.kt  QrDisplayViewModel.kt  QrScanActivity.kt
app/app/src/main/java/dev/kdrag0n/quicklock/ui/theme/: Color.kt  Theme.kt
app/app/src/main/java/dev/kdrag0n/quicklock/util/: Base1024.kt  Compose.kt  Perf.kt
app/app/src/main/res/layout/: activity_qr_scan.xml
app/app/src/main/res/values/: strings.xml
app/app/src/main/res/xml/: apduservice.xml
app/rust_lib/: .gitignore  Cargo.toml  build.rs
app/rust_lib/.cargo/: config.toml
app/rust_lib/src/: lib.rs  server.rs
app/src/androidTest/java/dev/kdrag0n/quicklock/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/kdrag0n/quicklock/: CryptoService.kt  CustomApplication.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/dev/kdrag0n/quicklock/server/: ApiClient.kt  ApiService.kt
app/src/main/java/dev/kdrag0n/quicklock/ui/: ConfirmDelegationActivity.kt  ConfirmDelegationViewModel.kt  MainActivity.kt  NfcUnlockActivity.kt  NfcWriteActivity.kt  NfcWriteViewModel.kt  QrDisplayActivity.kt  QrDisplayViewModel.kt  QrScanActivity.kt  QrScanViewModel.kt
app/src/main/java/dev/kdrag0n/quicklock/ui/theme/: Theme.kt  Type.kt
app/src/main/java/dev/kdrag0n/quicklock/util/: Coroutines.kt  Flow.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/dev/kdrag0n/quicklock/: ExampleUnitTest.kt
auditor/: Cargo.toml
auditor/src/: error.rs  main.rs  store.rs
gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  build.gradle.kts
server-rs/: .gitignore  Cargo.toml  README.md
server-rs/src/: bls.rs  checks.rs  crypto.rs  envelope.rs  error.rs  lib.rs  log.rs  serialize.rs
server-rs/src/audit/: client.rs  mod.rs  store.rs
server-rs/src/lock/: actions.rs  attestation.rs  config.rs  crypto.rs  homeassistant.rs  mod.rs  model.rs  pairing.rs  request.rs  store.rs
server/src/main/kotlin/dev/kdrag0n/quicklock/server/: Actions.kt  Application.kt  Attestation.kt  Certificates.kt  Crypto.kt  Data.kt  HomeAssistant.kt  Pairing.kt  Storage.kt  WebAuthn.kt
server/src/main/kotlin/dev/kdrag0n/quicklock/server/plugins/: HTTP.kt  Monitoring.kt  Routing.kt  Serialization.kt
server/src/main/resources/: application.conf
src/main/kotlin/dev/kdrag0n/quicklock/server/: Actions.kt  Application.kt  Attestation.kt  Certificates.kt  Crypto.kt  Entities.kt  HomeAssistant.kt  Pairing.kt  Storage.kt
src/test/kotlin/dev/kdrag0n/: ApplicationTest.kt
web/: gen_proto.sh  package.json
web/public/: client_lib.js  client_lib.wasm  client_lib.worker.js  index.html  sha-256-multiblock-aligned.txt
web/scripts/: build_emptool.sh  build_host.sh  build_larch.sh  build_larch_64.sh  build_openssl.sh  build_openssl_64.sh  run_envoy.sh
web/src/: App.tsx  api-types.ts  base1024.ts  bytes.ts  setupProxy.js  webauthn.ts
web/src/larch/: client.ts  remote.ts  types.ts
web/src/larch/grpc/: LogServiceClientPb.ts  log.proto  log_pb.d.ts  log_pb.js
web/src/webauthn/: browser.ts  debug.ts  larch.ts  types.ts
zkproof/: Cargo.toml
zkproof/circuit-rs/: .gitignore  Cargo.toml  proof.json
zkproof/circuit-rs/src/: chacha20.rs  chacha_dbg.rs  main.rs
zkproof/src/: main.rs
