[package]
name = "qlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
base64 = "0.13.0"
bls-signatures = "0.11.3"
once_cell = "1.13.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
ulid = "0.6.0"

[profile.release-lto]
inherits = "release"
lto = true
