[package]
name = "qlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
anyhow = "1.0.58"
asn1 = "0.10.0"
awc = "3.0.0"
base64 = "0.13.0"
bls-signatures = "0.11.3"
dashmap = { version = "5.3.4", features = ["serde"] }
futures-timer = "3.0.2"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.13.0"
parking_lot = "0.12.1"
pretty_env_logger = "0.4.0"
qrcode = "0.12.0"
rand = "0.8.5"
ring = "0.16.20"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
spki = "0.6.0"
thiserror = "1.0.31"
ulid = "0.6.0"
webauthn-rs = "0.3.2"
x509-parser = { version = "0.14.0", features = ["verify"] }

[profile.release-lto]
inherits = "release"
lto = true

[profile.dev]
debug = 1
