[package]
name = "qlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
asn1 = "0.10.0"
axum = { version = "0.5.13" }
base64 = "0.13.0"
bls-signatures = "0.11.3"
dashmap = { version = "5.3.4", features = ["serde"] }
hyper = "0.14.20"
lazy_static = "1.4.0"
once_cell = "1.13.0"
parking_lot = "0.12.1"
qrcode = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
ring = "0.16.20"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
spki = "0.6.0"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
ulid = "0.6.0"
webauthn-rs = "0.3.2"
x509-parser = { version = "0.14.0", features = ["verify"] }

[profile.release-lto]
inherits = "release"
lto = true

[profile.dev]
debug = 1
