[package]
name = "qlock_android"
version = "0.1.0"
edition = "2021"

[lib]
name = "qlock_android"
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.11.1"
axum = "0.5.13"
bls-signatures = { version = "0.12.0", features = ["blst", "multicore"], default-features = false }
jni = "0.19.0"
jni-sys = "0.3.0"
log = "0.4.17"
log-panics = "2.1.0"
qlock = { version = "0.1.0", path = "../../server-rs" }
rand = "0.8.5"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
