[package]
name = "circuit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3.2.1", features = ["avx2_backend"] }
dalek-ff-group = "0.1.2"
ff = { version = "0.12.0", features = ["ff_derive", "derive"] }
merlin = "3.0.0"
neptune = "7.0.0"
r1cs = { version = "0.4.7", path = "../../../../crypto/r1cs" }
#r1cs-zkinterface = "0.1.2"
rand = "0.8.5"
serde_json = "1.0.82"
spartan = "0.6.0"
#spartan-zkinterface = { git = "https://github.com/elefthei/spartan-zkinterface.git", version = "0.1.0" }

[profile.release]
debug = 1
